--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,10 @@
 {
-	"name": "flashdown",
-	"version": "0.0.0",
-	"dependencies": {
-		"angular": "~1.0.7",
-		"bootstrap": "~3.0.1"
-	},
-	"devDependencies": {
-		
-	}
+  "name": "flashdown",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular": "~1.0.7",
+    "bootstrap": "~3.0.1",
+    "angular-ui-router": "~0.2.0"
+  },
+  "devDependencies": {}
 }
