--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "bootstrap": "~3.0.1",
+    "bootstrap-css": "~2.3.2",
+    "angular-ui-bootstrap": "~0.7.0",
     "angular-ui-router": "~0.2.0"
   },
   "devDependencies": {}
