--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "angular": "~1.2.0",
     "angular-sanitize": "~1.2.0",
     "bootstrap-css": "~2.3.2",
-    "angular-ui-bootstrap": "~0.7.0",
+    "angular-ui-bootstrap-bower": "~0.7.0",
     "angular-ui-router": "~0.2.0"
   },
   "devDependencies": {}
