--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-sanitize": "~1.2.0",
     "bootstrap-css": "~2.3.2",
     "angular-ui-bootstrap-bower": "~0.7.0",
-    "angular-ui-router": "~0.2.0"
+    "angular-ui-router": "~0.2.0",
+    "font-awesome": "~4.0.3"
   },
   "devDependencies": {}
 }
