--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "bootstrap-css": "~2.3.2",
     "angular-ui-bootstrap-bower": "~0.7.0",
     "angular-ui-router": "~0.2.0",
+    "ace-builds": "~1.1.0",
     "font-awesome": "~4.0.3"
   },
   "devDependencies": {}
