--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "flashdown",
 	"version": "0.0.0",
 	"devDependencies": {
-		"pegjs": "~0.7.0"
-	}
+		"pegjs": "~0.7.0",
+		"grunt": "~0.4.2"
+	},
+	"private": true
 }
